Template cuando se compra por primera vez

--- a/auth-microservice/src/main/resources/templates/purchase.html
+++ b/auth-microservice/src/main/resources/templates/purchase.html
@@ -904,8 +904,7 @@
                                             font-size: 46px;
                                           "
                                           href=""
-                                          th:text="${coupon.code}"
-                                          ></a
+                                          >FGH-123-VBN</a
                                         ></strong
                                       >
                                     </h1>
@@ -1014,7 +1013,7 @@
                                         mso-hide: all;
                                       "
                                       ><a
-                                        href=""
+                                        href="http://localhost:5173/#/"
                                         class="es-button"
                                         target="_blank"
                                         style="
