--- a/auth-microservice/src/main/resources/templates/cancel.html
+++ b/auth-microservice/src/main/resources/templates/cancel.html
@@ -760,7 +760,7 @@
                                           font-size: 14px;
                                         "
                                         >.com</a
-                                      >&nbsp;o llámanos o escribenos&nbsp;al&nbsp;<a
+                                      >&nbsp;o llámanos o escríbenos&nbsp;al&nbsp;<a
                                         target="_blank"
                                         href=""
                                         style="
@@ -997,7 +997,7 @@
                                         font-size: 14px;
                                       "
                                     >
-                                      ¿Tienes alguna duda?&nbsp;Escribenos a&nbsp;<a
+                                      ¿Tienes alguna duda?&nbsp;Escríbenos a&nbsp;<a
                                         target="_blank"
                                         href=""
                                         style="
@@ -1009,7 +1009,7 @@
                                           font-size: 14px;
                                         "
                                         >krugercellmag@gmail.com</a
-                                      >&nbsp;O llámananos a &nbsp;<a
+                                      >&nbsp;O llámanos a &nbsp;<a
                                         target="_blank"
                                         href=""
                                         style="
